force-app/main/default/objects/C_Category__c/fields/C_Form__c.field-meta.xml
<CustomField>
    <fullName>C_Form__c</fullName>
    <label>Form</label>
    <referenceTo>C_Form__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>C_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>