force-app/main/default/objects/C_Category__c/fields/C_Icon__c.field-meta.xml
<CustomField>
    <fullName>C_Icon__c</fullName>
    <label>Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>