force-app/main/default/objects/C_Category__c/fields/C_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>C_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>