force-app/main/default/objects/C_Category__c/fields/C_Order__c.field-meta.xml
<CustomField>
    <fullName>C_Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>